Bug fix - review item min-height on mobile

--- a/themes/gv_sky/css/sass/_parts/_elements.sass
+++ b/themes/gv_sky/css/sass/_parts/_elements.sass
@@ -316,6 +316,9 @@
 			width: 100%
 			border-right: 0
 
+		+m(736)
+			min-height: 0
+
 		&-title
 			font-size: 18px
 			font-weight: 600
